Mise en forme boutons sociaux de login

--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -23,10 +23,10 @@
     .i-section__social
       span.i-subtitle Lancez-vous !
       nav.i-section__social__nav
-        button.o-connect-btn.o-connect-btn--fb.brad-2.f-white.f-reg.f-center  Log in with Facebook
-        button.o-connect-btn.o-connect-btn--tw.brad-2.f-white.f-reg.f-center Log in with Twitter
-        button.o-connect-btn.o-connect-btn--gml.brad-2.f-white.f-reg.f-center Log in with Gmail
-        button.o-connect-btn.o-connect-btn--inst.brad-2.f-white.f-reg.f-center Log in with Instagram
+        button.o-connect-btn.o-connect-btn--fb  Log in with Facebook
+        button.o-connect-btn.o-connect-btn--tw Log in with Twitter
+        button.o-connect-btn.o-connect-btn--gml Log in with Gmail
+        button.o-connect-btn.o-connect-btn--inst Log in with Instagram
         
   section.i-section
     .i-section__pane
