--- a/src/components/index/style.less
+++ b/src/components/index/style.less
@@ -204,6 +204,9 @@
   padding: .5rem .7rem .4rem 2rem;
   margin: .5rem @space / 2;
   font-size: @font-reg / 1.4;
+  color: @bg;
+  border-radius: radius-reg;
+  text-align: center;
 
   &::before{
     .mixin-before-abpos();
