--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -14,12 +14,7 @@
         a(href="").i-btn.i-text comment ça marche
         svg(viewBox="0 0 64.22 62.67").i-icon--arrow
           use(xlink:href="#ico-arrow")
-          
-    .i-section__pane.i-section__pane--ft.i-bg-skew
-      .i-section__img.i-section__img--isskewed
-        span.i-hottile-text.i-subtitle What’s New
-        img(srcset="@/assets/img/index/hot-tile@2x.png 2x, @/assets/img/index/hot-tile@1x.png 1x" src="@/assets/img/index/hot-tile@1x.png" width="350").i-img__hottile
-        
+            
     .i-section__social
       span.i-subtitle Lancez-vous !
       nav.i-section__social__nav
@@ -27,29 +22,34 @@
         button.o-connect-btn.o-connect-btn--tw Log in with Twitter
         button.o-connect-btn.o-connect-btn--gml Log in with Gmail
         button.o-connect-btn.o-connect-btn--inst Log in with Instagram
-        
+          
+    .i-section__pane.i-section__pane--ft.i-bg-skew
+      .i-section__img.i-section__img--isskewed
+        span.i-hottile-text.i-subtitle What’s New
+        img(srcset="@/assets/img/index/hot-tile@2x.png 2x, @/assets/img/index/hot-tile@1x.png 1x" src="@/assets/img/index/hot-tile@1x.png" width="350").i-img__hottile
+                
   section.i-section
     .i-section__pane
       .i-section__text
         h2.i-title
           svg(viewBox="0 0 64.22 62.67").i-icon
             use(xlink:href="#ico-cible")
-          | Trouvez 
+          | Trouvez
         p.i-subtitle.i-subtitle--underfacilement grâce au flux et à la barre de recherchers tous les types de concours qui vous interessent
               
     .i-section__pane
-      img(srcset="@/assets/img/index/page2@2x.png 2x, @/assets/img/index/page2@1x.png 1x" src="@/assets/img/index/page2@1x.png" width="500") 
+      img(srcset="@/assets/img/index/page2@2x.png 2x, @/assets/img/index/page2@1x.png 1x" src="@/assets/img/index/page2@1x.png" width="500").i-img 
        
   section.i-section
     .i-section__pane 
-      img(srcset="@/assets/img/index/page3@2x.png 2x, @/assets/img/index/page3@1x.png 1x" src="@/assets/img/index/page3@1x.png" width="500")
+      img(srcset="@/assets/img/index/page3@2x.png 2x, @/assets/img/index/page3@1x.png 1x" src="@/assets/img/index/page3@1x.png" width="500").i-img
         
     .i-section__pane
       .i-section__text--vote
         h2.i-title
           svg(viewBox="0 0 64.22 62.67").i-icon.i-icon--vote
             use(xlink:href="#ico-vote")
-          | Votez & Participez  
+          | Votez & Participez
         p.i-subtitle.i-subtitle--under gratuitement aux concours qui vous plaisent en quelques clics, sur tous vos appareils
       
   section.i-section
@@ -58,10 +58,10 @@
         h2.i-title
           svg(viewBox="0 0 64.22 62.67").i-icon
             use(xlink:href="#ico-gift")
-          | Gagnez  
+          | Gagnez
         p.i-subtitle.i-subtitle--under des prix spéciaux et donnez de la visibilité à votre talent
     .i-section__pane.i-section__pane--bot
-      img(srcset="@/assets/img/index/page4@2x.png 2x, @/assets/img/index/page4@1x.png 1x" src="@/assets/img/index/page4@1x.png" width="700")
+      img(srcset="@/assets/img/index/page4@2x.png 2x, @/assets/img/index/page4@1x.png 1x" src="@/assets/img/index/page4@1x.png" width="700").i-img
 
   footer.i-footer
     a(href="#").i-footer__link Mentions Légales
