--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -78,22 +78,22 @@
 .f-bold{ font-weight: @f-bold; }
 
 .f-sfat{ font-size: 1.8rem;
-  @media (min-width: 769px){ font-size: 1.25rem; }
+  @media (min-width: @tab){ font-size: 1.25rem; }
 }
 .f-st{ font-size: 1.4rem;
-  @media (min-width: 769px){ font-size: 1rem; }
+  @media (min-width: @tab){ font-size: 1rem; }
 }
 .f-stm{ font-size: 1.2rem;
-  @media (min-width: 769px){ font-size: .85rem; }
+  @media (min-width: @tab){ font-size: .85rem; }
 }
 .f-stl{ font-size: 1rem;
-  @media (min-width: 769px){ font-size: .7rem; }
+  @media (min-width: @tab){ font-size: .7rem; }
 }
 .f-si{ font-size: .8rem;
-  @media (min-width: 769px){ font-size: .6rem; }
+  @media (min-width: @tab){ font-size: .6rem; }
 }
 .f-sxs{ font-size: .7rem;
-  @media (min-width: 769px){ font-size: .5rem; }
+  @media (min-width: @tab){ font-size: .5rem; }
 }
 
 // decoration
