--- a/src/components/index/style.less
+++ b/src/components/index/style.less
@@ -342,6 +342,7 @@
   color: @bg;
   border-radius: radius-reg;
   text-align: center;
+  cursor: pointer;
 
   @media (min-width: @tab){
     padding: .5rem .7rem .4rem 2rem;
