--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -64,9 +64,9 @@
       img(srcset="@/assets/img/index/page4@2x.png 2x, @/assets/img/index/page4@1x.png 1x" src="@/assets/img/index/page4@1x.png" width="700").i-img
 
   footer.i-footer
-    a(href="#").i-footer__link Mentions Légales
-    a(href="#").i-footer__link Conditions Générales d’Utilisation
-    a(href="#").i-footer__link Confidentialité
-    a(href="#").i-footer__link Données Personnelles
+    a(href="/ml.html").i-footer__link Mentions Légales
+    a(href="/cgu.html").i-footer__link Conditions Générales d’Utilisation
+    a(href="/confidentialite.html").i-footer__link Confidentialité
+    a(href="/donnees-personnelles.html").i-footer__link Données Personnelles
   
   
