--- a/src/components/user/settings/template.pug
+++ b/src/components/user/settings/template.pug
@@ -1,22 +1,23 @@
-main.o-main.c-backbg.pl-1.pr-1.pb-1
-  .o-title.mt-1.mb-1.pt-05
-    a(@click="$router.go(-1)").p-abs
-      svg(viewBox="0 0 29.67 25.71").o-svg-btn.va-mid
-        use(xlink:href="#ico-arrow")
-    span.d-block.w-100.f-bold.f-stl.pt-025.f-center {{ title }}
-    span(v-if="desc").d-block.w-100.pt-025.f-center.f-grey.f-light.f-si {{ desc }}
+shell-app
+  main.o-main.c-backbg.pl-1.pr-1.pb-1
+    .o-title.mt-1.mb-1.pt-05
+      a(@click="$router.go(-1)").p-abs
+        svg(viewBox="0 0 29.67 25.71").o-svg-btn.va-mid
+          use(xlink:href="#ico-arrow")
+      span.d-block.w-100.f-bold.f-stl.pt-025.f-center {{ title }}
+      span(v-if="desc").d-block.w-100.pt-025.f-center.f-grey.f-light.f-si {{ desc }}
 
-  div(v-if="type !== 'contact'").o-setting__content.mt-1
-    | {{ settingsContent }} {{ type }}
-    
-  div(v-else).mt-1
-    .p-rel
-      span.p-abs.p-vcenter-abs.ml-1.f-si.f-bold.cur-none Objet :
-      input(type="text" v-model="contactObjet").w-100.brad-4.b-reg.p-1.pl-5.no-deco
+    div(v-if="type !== 'contact'").o-setting__content.mt-1
+      | {{ settingsContent }} {{ type }}
       
-    textarea(type="text" v-model="contactMessage" placeholder="Votre message").o-setting__textarea.w-100.brad-4.b-reg.mt-2.p-1.p-1.b-noresize.no-deco
-    a.d-block.f-bold.f-stl.pt-05.pb-05.pl-2.pr-2.mt-2.f-center.c-grad-yo.shadbox-light.brad-4.no-link envoyer
+    div(v-else).mt-1
+      .p-rel
+        span.p-abs.p-vcenter-abs.ml-1.f-si.f-bold.cur-none Objet :
+        input(type="text" v-model="contactObjet").w-100.brad-4.b-reg.p-1.pl-5.no-deco
+        
+      textarea(type="text" v-model="contactMessage" placeholder="Votre message").o-setting__textarea.w-100.brad-4.b-reg.mt-2.p-1.p-1.b-noresize.no-deco
+      a.d-block.f-bold.f-stl.pt-05.pb-05.pl-2.pr-2.mt-2.f-center.c-grad-yo.shadbox-light.brad-4.no-link envoyer
+        
       
-    
   
     
