Test securisation avec HelloJS pour Facebook

--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -18,7 +18,7 @@
     .i-section__social
       span.i-subtitle Lancez-vous !
       nav.i-section__social__nav
-        button.o-connect-btn.o-connect-btn--fb  Log in with Facebook
+        facebook-btn
         button.o-connect-btn.o-connect-btn--tw Log in with Twitter
         button.o-connect-btn.o-connect-btn--gml Log in with Gmail
         button.o-connect-btn.o-connect-btn--inst Log in with Instagram
