Ajout composant bouton d'accès par réseaux sociaux via HelloJS

--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -17,11 +17,7 @@
             
     .i-section__social
       span.i-subtitle Lancez-vous !
-      nav.i-section__social__nav
-        facebook-btn
-        button.o-connect-btn.o-connect-btn--tw Log in with Twitter
-        button.o-connect-btn.o-connect-btn--gml Log in with Gmail
-        button.o-connect-btn.o-connect-btn--inst Log in with Instagram
+      social-btn
           
     .i-section__pane.i-section__pane--ft.i-bg-skew
       .i-section__img.i-section__img--isskewed
