Design reseaux sociaux dans un seul composant

--- a/src/components/index/social-btn/template.pug
+++ b/src/components/index/social-btn/template.pug
@@ -1,5 +1,5 @@
 nav.i-section__social__nav
   button(@click="auth('facebook')").o-connect-btn.o-connect-btn--fb  Log in with Facebook
-  button(@click="auth('facebook')").o-connect-btn.o-connect-btn--tw Log in with Twitter
-  button(@click="auth('facebook')").o-connect-btn.o-connect-btn--gml Log in with Gmail
-  button(@click="auth('facebook')").o-connect-btn.o-connect-btn--inst Log in with Instagram
+  button(@click="auth('twitter')").o-connect-btn.o-connect-btn--tw Log in with Twitter
+  button(@click="auth('google')").o-connect-btn.o-connect-btn--gml Log in with Gmail
+  button(@click="auth('instagram')").o-connect-btn.o-connect-btn--inst Log in with Instagram
