--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -11,7 +11,7 @@
         h2.i-text.i-section__text--min Hepic vous rapproche des Marques et des Organismes que vous aimez, en vous donnant un accès simple et gratuit à leur concours.
         p.i-subtitle Partagez votre talent, et remportez des prix !
       .i-discover.i-section__text--min
-        a(href="").i-btn.i-text comment ça marche
+        a(href="#discover").i-btn.i-text comment ça marche
         svg(viewBox="0 0 64.22 62.67").i-icon--arrow
           use(xlink:href="#ico-arrow")
             
@@ -24,7 +24,7 @@
         span.i-hottile-text.i-subtitle What’s New
         img(srcset="@/assets/img/index/hot-tile@2x.png 2x, @/assets/img/index/hot-tile@1x.png 1x" src="@/assets/img/index/hot-tile@1x.png" width="350").i-img__hottile
                 
-  section.i-section
+  section#discover.i-section
     .i-section__pane
       .i-section__text
         h2.i-title
