--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -48,8 +48,8 @@
           | Votez & Participez
         p.i-subtitle.i-subtitle--under gratuitement aux concours qui vous plaisent en quelques clics, sur tous vos appareils
       
-  section.i-section
-    .i-section__pane
+  section.i-section.i-section__pane--last
+    .i-section__pane.i-section__pane--last
       .i-section__text--gift
         h2.i-title
           svg(viewBox="0 0 64.22 62.67").i-icon
