--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -3,7 +3,7 @@
     .i-header__brand
       img(srcset="~@/assets/img/hepic@2x.png 2x, ~@/assets/img/hepic@1x.png 1x" src="~@/assets/img/hepic@1x.png").i-header__logo
       h1.i-main__title Trouvez, Participez, et gagner gratuitement aux concours qui sont faits pour vous
-    button.i-header__ddl télécharger la web application
+    install-btn
     
   section.i-section
     .i-section__pane.i-section__pane--ft
