Raccourcit ecriture v-if de la popin installation pawa

--- a/src/components/index/install-btn/template.pug
+++ b/src/components/index/install-btn/template.pug
@@ -11,4 +11,4 @@ div
       div.i-popin__detail
         p(v-if="os === 'iOS'").i-popin__detail__text Appuyer sur <img src="@/assets/img/UIBarButtonAction_2x.png" class="i-icon-tab"> puis sur "Ajouter à l'écran d'accueil"
         p(v-if="os === 'Android'").i-popin__detail__text Appuyer sur <img src="@/assets/img/UIBarButtonThreeDots_2x.png" class="i-icon-tab"> puis sur "Ajouter à l'écran d'accueil"
-        p(v-if="os === 'Windows Phone' || 'unknown'").i-popin__detail__text A installer sur iOS ou Android
+        p(v-else).i-popin__detail__text A installer sur iOS ou Android
