Retirer bouton more sur les tiles de type podium

--- a/src/components/flux/podium/template.pug
+++ b/src/components/flux/podium/template.pug
@@ -6,8 +6,8 @@ div
         span.pl-1.f-stm.pr-05.f-bold {{ data.brand }}
         span.f-cap.f-stl.f-lgrey.f-reg {{ data.desc }}
         
-    a(href="#").no-link
-      span.o-more
+    //- a(href="#").no-link
+    //-   span.o-more
         
   .o-tile__pictures
     a(href="image.html" v-for="pic in data.pictures").p-rel
