Design partage sur popin de vote

--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -67,6 +67,7 @@
 // colors
 .f-white{ color: @prim; }
 .f-grey{ color: @l-grey; }
+.f-dgrey{ color: @d-grey; }
 .f-lgrey{ color: @grey; }
 .f-green{ color: @green; }
 .f-red{ color: @red; }
@@ -98,6 +99,7 @@
 
 // decoration
 .f-dec-it{ font-style: italic; }
+.f-break{ word-break: break-all; }
 
 // position
 .f-center{ text-align: center; }
@@ -243,6 +245,7 @@
 .pt-4{ padding-top: @space * 4; }
 
 .pl-5{ padding-left: @space * 5; }
+.pr-5{ padding-right: @space * 5; }
 
 .mt-6{ margin-top: @space * 6; }
 .mt-10{ margin-top: @space * 10; }
