--- a/src/assets/style/utils/layout.less
+++ b/src/assets/style/utils/layout.less
@@ -20,8 +20,8 @@ ul{
   margin-bottom: 0;
 }
 
-a{ 
-  color: @fg;
+a{
+  color: @d-grey;
 }
 
 button{
@@ -215,6 +215,16 @@ button{
   @media (min-width: @desktop){
     width: @ico-width / 1.5;
     height: @ico-width / 1.5;
+  }
+}
+
+.o-svg-share{
+  width: @ico-width * 1.5;
+  height: @ico-width * 1.5;
+
+  @media (min-width: @desktop){
+    width: @ico-width;
+    height: @ico-width;
   }
 }
 
