Position icone partage facebook par rapport twitter

--- a/src/components/vote/share-popin/template.pug
+++ b/src/components/vote/share-popin/template.pug
@@ -10,9 +10,9 @@ div
       .pb-1 lien à partager :
       .f-break  www.hepic.com/lzskieuvlkeqrbvnmiqerbvgknqjdebkm
   .d-flex.d-flex-hm.mb-2
-    a(href="#").pr-2
-      svg(viewBox="0 0 248 247.98").o-svg-share.va-mid
+    a(href="#").pr-1
+      svg(viewBox="0 0 248 247.98").o-svg-share--fb.va-mid
         use(xlink:href="#ico-facebook-btn")
-    a(href="#").pl-2
+    a(href="#").pl-1
       svg(viewBox="0 0 246 172.09").o-svg-share.va-mid
         use(xlink:href="#ico-twitter-btn")
