Test route actuelle

--- a/src/components/vote/share-popin/template.pug
+++ b/src/components/vote/share-popin/template.pug
@@ -9,7 +9,7 @@ div
     li.w-100.p-1.pl-5.pr-5.f-stl.f-reg.f-center.f-dgrey
       .pb-1 lien à partager :
       .f-break  www.hepic.com/lzskieuvlkeqrbvnmiqerbvgknqjdebkm
-  <social-sharing inline-template>
+  <social-sharing url="$route" inline-template>
     .d-flex.d-flex-hm.mb-2
       network(network="facebook").pr-1
         svg(viewBox="0 0 248 247.98").o-svg-share--fb.va-mid
