test url partage

--- a/src/components/vote/share-popin/template.pug
+++ b/src/components/vote/share-popin/template.pug
@@ -10,8 +10,7 @@ div
       .pb-1 lien à partager :
       .f-break  www.hepic.com/lzskieuvlkeqrbvnmiqerbvgknqjdebkm
       
-  <social-sharing url="currentUrl" inline-template>
-    
+  social-sharing(:url="currentUrl" inline-template)
     .d-flex.d-flex-hm.mb-2
       network(network="facebook").pr-1
         svg(viewBox="0 0 248 247.98").o-svg-share--fb.va-mid
@@ -19,4 +18,3 @@ div
       network(network="twitter").pl-1
         svg(viewBox="0 0 246 172.09").o-svg-share.va-mid
           use(xlink:href="#ico-twitter-btn")
-  </social-sharing>
