Changemement balise OG vote

--- a/src/components/vote/share-popin/template.pug
+++ b/src/components/vote/share-popin/template.pug
@@ -10,7 +10,7 @@ div
       .pb-1 lien à partager :
       .f-break  www.hepic.com/lzskieuvlkeqrbvnmiqerbvgknqjdebkm
       
-  social-sharing(:url="currentUrl" inline-template)
+  social-sharing(:url="currentUrl" :title="title" :quote="title" inline-template)
     .d-flex.d-flex-hm.mb-2
       network(network="facebook").pr-1
         svg(viewBox="0 0 248 247.98").o-svg-share--fb.va-mid
