Ajout popin de partage réseaux sociaux (profil, logo et desc concours)

--- a/src/assets/style/utils/layout.less
+++ b/src/assets/style/utils/layout.less
@@ -58,6 +58,11 @@ button{
   }
 }
 
+.o-sep{
+  display: block;
+  width: 90%;
+}
+
 //------- TILE ZONES -------
 // ---------------------------
 //
