Récupération des codes erreurs et fin token pour rediriger en logout

--- a/src/components/user/settings-routes/template.pug
+++ b/src/components/user/settings-routes/template.pug
@@ -5,7 +5,7 @@ div
         
   ul.d-col-flex.d-flex-vm.mt-2.mb-2.no-list
     li.p-1.f-stl.f-reg
-      router-link(to="/user/settings/deconnection").no-link Deconnexion
+      a(@click="logout").no-link Deconnexion
     li.p-1.f-stl.f-reg
       router-link(to="/user/settings/confidential").no-link Confidentialité
     li.p-1.f-stl.f-reg
