Retrait lien image.html

--- a/src/components/flux/podium/template.pug
+++ b/src/components/flux/podium/template.pug
@@ -10,7 +10,7 @@ div
     //-   span.o-more
         
   .o-tile__pictures
-    a(href="image.html" v-for="pic in data.pictures").p-rel
+    a(href="#" v-for="pic in data.pictures").p-rel
       img(:src="pic", alt="")
       .o-ico-sprite
 
