Reskin page index pour SEO

--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -2,14 +2,13 @@
   header.i-header
     .i-header__brand
       img(srcset="~@/assets/img/hepic@2x.png 2x, ~@/assets/img/hepic@1x.png 1x" src="~@/assets/img/hepic@1x.png").i-header__logo
-      h1.i-main__title Trouvez, Participez, et gagner gratuitement aux concours qui sont faits pour vous
+      h1.i-main__title Trouvez, tentez et gagnez des concours photo gratuits et faits pour vous
     install-btn
     
   section.i-section
     .i-section__pane.i-section__pane--ft
       .i-section__text
-        h2.i-text.i-section__text--min Hepic vous rapproche des Marques et des Organismes que vous aimez, en vous donnant un accès simple et gratuit à leur concours.
-        p.i-subtitle Partagez votre talent, et remportez des prix !
+        h2.i-text.i-section__text--min Hepic vous rapproche des marques et des organismes que vous aimez, en vous donnant un accès simple et gratuit à leurs concours photo. Et cela en quelques clics, sur le web ou depuis l'application. Sur Hepic, partagez votre talent photo et remportez des lots !
       .i-discover.i-section__text--min
         a(href="#discover").i-btn.i-text comment ça marche
         svg(viewBox="0 0 64.22 62.67").i-icon--arrow
@@ -21,7 +20,7 @@
           
     .i-section__pane.i-section__pane--ft.i-bg-skew
       .i-section__img.i-section__img--isskewed
-        span.i-hottile-text.i-subtitle What’s New
+        h3.i-hottile-text.i-subtitle En ce moment sur Hepic
         img(srcset="@/assets/img/index/hot-tile@2x.png 2x, @/assets/img/index/hot-tile@1x.png 1x" src="@/assets/img/index/hot-tile@1x.png" width="350").i-img__hottile
                 
   section#discover.i-section
@@ -30,9 +29,9 @@
         h2.i-title
           svg(viewBox="0 0 64.22 62.67").i-icon
             use(xlink:href="#ico-cible")
-          | Trouvez
-        p.i-subtitle.i-subtitle--underfacilement grâce au flux et à la barre de recherchers tous les types de concours qui vous interessent
-              
+          | Trouver
+        p.i-text.i-subtitle--under Repérez et suivez les concours photo qui correspondent à vos envies. Retrouvez des challenges exclusifs organisés par vos marques, évènements, associations et organismes préférés.
+        strong.i-subtitle.i-subtitle--under Sur Hepic, découvrez des prix et une vitrine pour votre créativité. 
     .i-section__pane
       img(srcset="@/assets/img/index/page2@2x.png 2x, @/assets/img/index/page2@1x.png 1x" src="@/assets/img/index/page2@1x.png" width="500").i-img 
        
@@ -45,9 +44,9 @@
         h2.i-title
           svg(viewBox="0 0 64.22 62.67").i-icon.i-icon--vote
             use(xlink:href="#ico-vote")
-          | Votez & Participez
-        p.i-subtitle.i-subtitle--under gratuitement aux concours qui vous plaisent en quelques clics, sur tous vos appareils
-      
+          | Participer & Voter 
+        p.i-text.i-subtitle--under Envie de partager vos créations, de gagner un lot, d'encourager un organisateur un participant ou un organisateur ? Tentez votre chance en postant votre photo sur les concours qui vous intéressent, ou votez simplement pour les photos que vous aimez. 
+        strong.i-subtitle.i-subtitle--under Restez notifié de votre performance en téléchargeant l'application Hepic 
   section.i-section.i-section__pane--last
     .i-section__pane.i-section__pane--last
       .i-section__text--gift
@@ -55,7 +54,9 @@
           svg(viewBox="0 0 64.22 62.67").i-icon
             use(xlink:href="#ico-gift")
           | Gagnez
-        p.i-subtitle.i-subtitle--under des prix spéciaux et donnez de la visibilité à votre talent
+        p.i-text.i-subtitle--under Remportez les prix spécialement préparés par nos organisateurs partenaires. Faites-vous remarquer aux concours où vous avez brillé ! 
+        strong.i-subtitle.i-subtitle--under Commencez par vous connecter avec votre réseau social favori
+
     .i-section__pane.i-section__pane--bot
       img(srcset="@/assets/img/index/page4@2x.png 2x, @/assets/img/index/page4@1x.png 1x" src="@/assets/img/index/page4@1x.png" width="700").i-img
 
